Update environment configuration in .env file with new database URL, Pagespeed API key, and allowed origin for CORS. Enhance .gitignore to include Deno lock file and node_modules for better project management. Further review may be necessary to ensure compatibility with existing setups.

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # NEON_DATABASE_URL="YOUR_NEON_DATABASE_URL_HERE"
-DATABASE_URL="YOUR_NEON_DATABASE_URL_HERE"
+DATABASE_URL="postgresql://neondb_owner:eqlACo9xcv3h@ep-purple-base-a5eeqbcq-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require"
 # PAGESPEED_API_KEY="YOUR_GOOGLE_PAGESPEED_API_KEY_HERE"
-PAGESPEED_API_KEY="YOUR_GOOGLE_PAGESPEED_API_KEY_HERE"
+PAGESPEED_API_KEY="AIzaSyD6YTIhmQA2Cby5Jk-Cpjtm32YftDbfAPo"
 # Optional: Define allowed origins for CORS
-# ALLOWED_ORIGIN="https://your-webflow-site.webflow.io" # Or your custom domain
+# Use '*' for development only (less secure), or specify your frontend domain(s)
+ALLOWED_ORIGIN="https://dominiques-five-star-site-a4409bfdb27d2.webflow.io" # <-- Set this to your Webflow site's domain
