Refactor vercel.json by removing comments for cleaner configuration. The runtime and memory settings for the Deno function remain unchanged, as well as the rewrites for routing. Further review may be needed to ensure clarity and maintainability of the configuration.

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
-// vercel.json
 {
   "functions": {
     "main.ts": {
-      "runtime": "@vercel/deno@1.2.0", // Use the Vercel Deno runtime
-      "memory": 1024 // Optional: Allocate more memory if needed
+      "runtime": "@vercel/deno@1.2.0",
+      "memory": 1024
     }
   },
   "rewrites": [
     {
-      "source": "/(.*)", // Match all incoming paths
-      "destination": "/main.ts" // Route them to your Deno entrypoint
+      "source": "/(.*)",
+      "destination": "/main.ts"
     }
   ]
 }
