Refactor vercel.json to transition from a functions-based configuration to a builds array for the Deno runtime. The memory setting remains unchanged, ensuring consistency in deployment. Further exploration may be needed to assess the impact of this structural change on the overall configuration.

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-  "functions": {
-    "main.ts": {
-      "runtime": "@vercel/deno@1.2.0",
-      "memory": 1024
+  "builds": [
+    {
+      "src": "main.ts",
+      "use": "@vercel/deno@1.2.0",
+      "config": { "memory": 1024 }
     }
-  },
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
