--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
   "builds": [
     {
       "src": "main.ts",
-      "use": "@vercel/deno",
-      "config": { "memory": 1024 }
+      "use": "@vercel/deno"
     }
   ],
   "rewrites": [
