--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "builds": [
     {
       "src": "main.ts",
-      "use": "@vercel/deno"
+      "use": "@vercel/deno@1.2.0"
     }
   ],
   "rewrites": [
