--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 {
+  "builds": [
+    {
+      "src": "main.ts",
+      "use": "@vercel/deno"
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/"
+      "destination": "/main.ts"
     }
   ]
 }
