--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-  "builds": [
-    {
-      "src": "main.ts",
-      "use": "@vercel/deno"
-    }
-  ],
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/main.ts"
+      "destination": "/"
     }
   ]
 }
